<resources>
    <string name="app_name">Parking App</string>
    <string name="app_name_stag">Parking App (Staging)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="settings">Settings</string>
    <string name="start_title">SMART PARKING APPLICATION</string>
    <string name="start_sub_title">A Project of DMP and LOCC</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="powered_by">Powered By: </string>
    <string name="signup_title">Sign Up</string>
    <string name="signin_title">Sign In</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_retrieve_password">Retrieve Password</string>
    <string name="hint_pass">Enter Password</string>
    <string name="hint_phoneno">Mobile Number</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="btn_retrive_otp">Retrieve OTP</string>
    <string name="pin_content_desc">PIN input field</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below in case if we fail to detect the SMS automatically)</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_forget_password">Forget Password</string>
    <string name="retrieve_password">Retrieve Password</string>
    <string name="err_msg_mobile">Enter valid mobile number</string>
    <string name="err_msg_fullname">Enter Full Name</string>
    <string name="err_msg_vehicle">Enter vehicle no</string>
    <string name="err_old_password">Enter valid old password</string>
    <string name="err_msg_password">Enter valid password</string>
    <string name="err_msg_password_signup">Password must be minimum of 4 characters</string>
    <string name="err_msg_pin">Enter valid pin</string>
    <string name="find_nearest">Find Nearest</string>
    <string name="err_new_password">Enter valid new password</string>
    <string name="err_confirm_password">Enter valid confirm password</string>
    <string name="no_account_yet_click_here">No account yet? Click Here</string>
    <string name="forget_password_click_here">Forgot Password? Click Here</string>
    <string name="password_not_matched">New Password &amp; Confirm password doesn\'t matched</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="law">Law</string>
    <string name="get_discount">Get Discount</string>
    <string name="give_review_rating">Give Rating/Review</string>
    <string name="follow_us">Follow Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="share">Share</string>
    <string name="your_booked">Your Booked</string>
    <string name="notification">Notification</string>
    <string name="my_account">My Account</string>
    <string name="parking">Parking</string>
    <string name="parking_spot">Parking Spot</string>
    <string name="learn_law">Learn Laws</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
    <string name="car_number">Car Number</string>
    <string name="nid_number">NID Number</string>
    <string name="occupation">Occupation (Optional)</string>
    <string name="signOut">Sign Out</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member_click_here">Already a member? Click here</string>
    <string name="submit">Submit</string>
    <string name="full_name">Full Name</string>
    <string name="reg_num">Vehicle Registration Number</string>
    <string name="vehicle_no">Vehicle No: </string>
    <string name="user_phone_no">User Phone No</string>
    <string name="parking_slots">Parking Slots</string>
    <string name="parking_area_name">Parking Area Name</string>
    <string name="address">Address</string>
    <string name="no_nearest_parking_area_found">No nearest parking area found</string>
    <string name="connect_to_internet">Please Connect to Internet</string>
    <string name="connect_to_internet_gps">Please Connect to GPS/Internet</string>
    <string name="close_app">Close App</string>
    <string name="conn_failed">Connection Failed</string>
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="demo_number">70</string>
    <string name="subject_to_availability">Subject to availability</string>
    <string name="get_direction">Get Direction</string>
    <string name="welcome_to_smart_parking">Welcome, Smart Parking</string>
    <string name="exit_message">Please Press here to exit!</string>
    <string name="exit_message_main">Press OK to exit!</string>
    <string name="distance">%1$s</string>
    <string name="parking_time">Arrival 04.30pm - 12.30pm Departure </string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="unavailable_parking_spot">Unavailable Parking Spot</string>
    <string name="no_parking_spot_message">You cannot reserve this spot for booking, as there is no parking slot</string>
    <string name="confirm_booking_message">
        We do not allow booking to the parking spot until you reach the parking spot</string>
    <string name="bottom_Sheet_text">Choose a spot or swipe up for more</string>
    <string name="nearest_parking_from_your_destination">Nearest Parking From Your Destination</string>
    <string name="lorum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
        laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
        esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="loream_ipsum">is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s.</string>
    <string name="date">wed,5 Feb</string>
    <string name="schedule_heading">Schedule</string>
    <string name="arrived_text">Set parking time:</string>
    <string name="departure_text">Select how long you want to book:</string>
    <string name="book">Your book</string>
    <string name="gps_network_not_enabled">GPS network not enabled!</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="locc_smart_parking_app_needs_permission_to_access_all_time_device_location_to_provide_required_services_please_allow_the_permission">
        LOCC Smart Parking App needs permission to access all time device location to provide required services. Please allow the permission</string>
    <string name="locc_smart_parking_app_needs_permission_to_access_device_location_to_provide_required_services_please_allow_the_permission">
        LOCC Smart Parking App needs permission to access device location to provide required services. Please allow the permission</string>
    <string name="permission_request">Permission Request</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="no_data_available">Enter a valid place to search for on \nParking App</string>
    <string name="schedule_parking">Schedule Parking Book</string>
    <string name="by_using_this_app_you_agree_to_our_terms_and_conditions_amp_privacy_policy">
        <![CDATA[By Using this app you agree to our Terms and Conditions & Privacy Policy]]></string>
    <string name="cancel">Cancel</string>
    <string name="parking_slot">Parking Slot 17</string>
    <string name="total_time">2.30h</string>
    <string name="total_fair">Total: BDT </string>
    <string name="rate_tip">Rate and tip</string>
    <string name="view_receipt">View Receipt</string>
    <string name="get_help">Get Help</string>
    <string name="call">Call</string>
    <string name="radio_general">General</string>
    <string name="radio_military">Military</string>
    <string name="first_two_digit">First two digit</string>
    <string name="last_four_digit">Last four digit</string>
    <string name="army_vehicle_arrow">^</string>
    <string name="parked">Parked</string>
    <string name="please_contact_our_support_team_for_your_queries">Please contact our support team for your necessary queries</string>
    <string name="sms">SMS</string>
    <string name="add_vehicle">Add Vehicle</string>
</resources>