<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_bottom_sheet_dialog"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/app_padding"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

    <TextView
        style="@style/MessageTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_radius"
        android:text="@string/get_help" />

    <TextView
        style="@style/MessageTextStyleSecondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/app_radius"
        android:text="@string/please_contact_our_support_team_for_your_queries"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_call"
            style="@style/ButtonSmallStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dim2"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/app_radius"
            android:layout_weight="1"
            android:text="@string/sms" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_sms"
            style="@style/ButtonSmallStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim2"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/app_radius"
            android:layout_weight="1"
            android:text="@string/call" />

    </LinearLayout>

</LinearLayout>