<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dim30"
    android:background="@color/white"
    tools:context=".ui.permission.PermissionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageViewAppImage"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dim200"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:foregroundGravity="center"
            android:src="@drawable/ic_logo_original"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="monospace"
            android:text="@string/permission_request"
            android:textColor="@color/black"
            android:textSize="@dimen/dimTex24"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/permissionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim35"
            android:fontFamily="monospace"
            android:gravity="center_horizontal"
            android:text="@string/locc_smart_parking_app_needs_permission_to_access_device_location_to_provide_required_services_please_allow_the_permission"
            android:textColor="@color/black" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_grant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:text="@string/grant_permission"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</RelativeLayout>