<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="@dimen/app_radius"
        android:padding="@dimen/app_radius"
        android:text="@string/add_vehicle"
        android:textColor="@color/black"
        android:textSize="@dimen/dimTex16" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:padding="@dimen/app_radius">

        <RadioButton
            android:id="@+id/radioGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radio_general" />

        <RadioButton
            android:id="@+id/radioMilitary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_military" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayoutGeneralFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3">

        <Spinner
            android:id="@+id/classSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/divSpinner"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutCarNumber"
            style="@style/TextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim10"
            android:layout_weight="1"
            android:hint="@string/car_number">

            <EditText
                android:id="@+id/editTextCarNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="numberDecimal"
                android:maxLength="6"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/_12ssp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMilitaryFormat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:orientation="horizontal"
        android:padding="@dimen/dim5"
        android:visibility="gone"
        android:weightSum="2.3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_margin="2dp"
            android:layout_weight=".3"
            android:gravity="end"
            android:text="@string/army_vehicle_arrow"
            android:textColor="@color/black"
            android:textSize="@dimen/dimTex16" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutVehicleMilitaryFirstTwoDigit"
            style="@style/TextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editTextVehicleRegNumberMilitaryFirstTwoDigit"
                tools:ignore="TextFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_two_digit"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="2"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="@dimen/_9ssp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutVehicleMilitaryLastFourDigit"
            style="@style/TextLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/editTextVehicleRegNumberMilitaryLastFourDigit"
                tools:ignore="TextFields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_four_digit"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:maxLength="4"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:textSize="@dimen/_12ssp" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim5"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_cancel"
            style="@style/ButtonSmallStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dim2"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/app_radius"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_submit"
            style="@style/ButtonSmallStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim2"
            android:layout_gravity="start"
            android:layout_marginTop="@dimen/app_radius"
            android:layout_weight="1"
            android:text="@string/submit" />

    </LinearLayout>

</LinearLayout>