<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dim3"
    android:layout_marginBottom="@dimen/dim3"
    android:background="?android:attr/selectableItemBackground"
    android:clickable="true"
    android:elevation="@dimen/dim3"
    android:focusable="true"
    android:padding="@dimen/dim3"
    app:ignore="NamespaceTypo"
    card_view:cardCornerRadius="@dimen/dim5">


    <LinearLayout
        android:id="@+id/rowFG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dim5"
        android:orientation="vertical"
        android:padding="@dimen/dim10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.5">

            <TextView
                android:id="@+id/textViewParkingSlot"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/parking_slot"
                android:textColor="@color/black"
                android:textSize="@dimen/dimTex15"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@color/red"
                    android:gravity="center"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/cancel"
                    android:textColor="@color/color_selector_white"
                    android:textSize="@dimen/dimTex16"
                    android:textStyle="bold"
                    android:visibility="gone" />


                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:text="@string/parked"
                    android:textColor="@color/green2"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </FrameLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textViewParkingSlotAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textColor="@color/gray"
            android:textSize="@dimen/_12ssp"
            android:textStyle="normal"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim5"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textViewParkingTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/parking_time"
                android:textColor="@color/gray"
                android:textSize="@dimen/dimTex12"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/textViewParkingTotalTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="0.5"
                android:gravity="end"
                android:text="@string/total_time"
                android:textColor="@color/gray"
                android:textSize="@dimen/dimTex12"
                android:textStyle="normal" />

        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="5px"
            android:layout_marginTop="@dimen/dim5"
            android:layout_marginBottom="@dimen/dim5"
            android:background="@color/quantum_grey"
            android:padding="@dimen/dim2"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">

                <TextView
                    android:id="@+id/textViewParkingTotalPaymentAmount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/total_fair"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimTex20"
                    android:textStyle="normal" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end">

                    <TextView
                        android:id="@+id/textViewParkingRateNTip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@drawable/border"
                        android:text="@string/rate_tip"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12ssp"
                        android:textStyle="normal" />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dim5"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnViewReceipt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dim2"
                    android:layout_weight="1"
                    android:background="#eeeeee"
                    android:backgroundTint="#eeeeee"
                    android:text="@string/view_receipt"
                    android:textAllCaps="false" />

                <Button
                    android:id="@+id/btnGetHelp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dim2"
                    android:layout_weight="1"
                    android:background="#eeeeee"
                    android:backgroundTint="#eeeeee"
                    android:text="@string/get_help"
                    android:textAllCaps="false" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
